--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-game-kit": "^1.0.6",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "socket.io": "^4.7.4",
